Rename 'properViewMode' by 'handleViewMode' 	modified:   ../../../resources/webModuleApplicationContext.xml 	modified:   clinicalnotes.html 	modified:   diagnostic-imaging.html 	modified:   discharge.html 	modified:   dispense-med.html 	modified:   fluidbalance.html 	modified:   history.html 	modified:   immunity.html 	modified:   ipd-nurse.html 	modified:   lines-tubes.html 	modified:   med-order.html 	modified:   nvobs.html 	modified:   opd-nurse.html 	modified:   phys-exam.html 	modified:   treatment.html 	modified:   triage.html 	modified:   vitals-pews.html 	modified:   wound.html 	renamed:    ../scripts/properViewMode.js -> ../scripts/handleViewMode.js

--- a/omod/src/main/webapp/resources/htmlforms/clinicalnotes.html
+++ b/omod/src/main/webapp/resources/htmlforms/clinicalnotes.html
@@ -1,11 +1,11 @@
 <htmlform formUuid="d0c9f084-a2dc-4ed2-b69b-ab7fd3e71a97" formName="Clinical Notes" formEncounterType="49e7bc6c-bfbd-40dc-8164-45d82c55b5f9" formVersion="0.5">
 
 <ifMode mode="VIEW">
-	<script type="text/javascript" id="properViewMode">
+	<script type="text/javascript" id="handleViewMode">
 
 		// JavaScript for VIEW mode
 		jQuery(document).ready(function(){
-			properViewMode("d0c9f084-a2dc-4ed2-b69b-ab7fd3e71a97");
+			handleViewMode("d0c9f084-a2dc-4ed2-b69b-ab7fd3e71a97");
 		});
 	</script>
 </ifMode>
