--- a/omod/src/main/webapp/resources/htmlforms/diagnostic-imaging.html
+++ b/omod/src/main/webapp/resources/htmlforms/diagnostic-imaging.html
@@ -59,11 +59,11 @@
 
 
 <ifMode mode="VIEW">
-	<script type="text/javascript" id="properViewModeForTable">
+	<script type="text/javascript" id="handleViewModeForTable">
 		// JavaScript for VIEW mode
 		jQuery(document).ready(function(){
-			properViewModeForTable("eb7b12ef-bea9-4aa8-8771-adbd9879d191");
-			properViewMode("eb7b12ef-bea9-4aa8-8771-adbd9879d191");
+			handleViewModeForTable("eb7b12ef-bea9-4aa8-8771-adbd9879d191");
+			handleViewMode("eb7b12ef-bea9-4aa8-8771-adbd9879d191");
 			
 		});
 	</script>
