--- a/omod/src/main/webapp/resources/htmlforms/discharge.html
+++ b/omod/src/main/webapp/resources/htmlforms/discharge.html
@@ -12,12 +12,12 @@
 
 		
 <ifMode mode="VIEW">
-	<script type="text/javascript" id="properViewMode">
+	<script type="text/javascript" id="handleViewMode">
 
 		// JavaScript for VIEW mode
 		jQuery(document).ready(function(){
-			properViewMode("cdc13a25-fe9e-43a5-85dd-7e2f31e8c860");
-			properViewModeForTable("cdc13a25-fe9e-43a5-85dd-7e2f31e8c860");
+			handleViewMode("cdc13a25-fe9e-43a5-85dd-7e2f31e8c860");
+			handleViewModeForTable("cdc13a25-fe9e-43a5-85dd-7e2f31e8c860");
 		});
 	</script>
 </ifMode>
