--- a/omod/src/main/webapp/resources/htmlforms/lines-tubes.html
+++ b/omod/src/main/webapp/resources/htmlforms/lines-tubes.html
@@ -1,13 +1,13 @@
 <htmlform formUuid="592bddc7-9889-490b-b3fd-5795648b078a" formName="Lines and Tubes" formEncounterType="934aad8b-250d-450b-9cb3-ca5f01841f61" formVersion="0.5">
 
 <ifMode mode="VIEW">
-	<script type="text/javascript" id="properViewMode">
+	<script type="text/javascript" id="handleViewMode">
 
 		// JavaScript for VIEW mode
 
 		if(jQuery){
 			jQuery(document).ready(function(){
-				properViewMode("592bddc7-9889-490b-b3fd-5795648b078a");
+				handleViewMode("592bddc7-9889-490b-b3fd-5795648b078a");
 			});
 		}
 	</script>
