--- a/omod/src/main/webapp/resources/htmlforms/nvobs.html
+++ b/omod/src/main/webapp/resources/htmlforms/nvobs.html
@@ -12,11 +12,11 @@
 
 
 <ifMode mode="VIEW">
-	<script type="text/javascript" id="properViewMode">
+	<script type="text/javascript" id="handleViewMode">
 		// JavaScript for VIEW mode
 		if(jQuery){
 			jQuery(document).ready(function(){
-				properViewMode("d18289b0-d0a4-4753-a500-55767eb057de");
+				handleViewMode("d18289b0-d0a4-4753-a500-55767eb057de");
 			});
 		}
 	</script>
