--- a/omod/src/main/webapp/resources/htmlforms/phys-exam.html
+++ b/omod/src/main/webapp/resources/htmlforms/phys-exam.html
@@ -17,7 +17,7 @@
 
 
 <ifMode mode="VIEW">
-	<script type="text/javascript" id="properViewModeForTable">
+	<script type="text/javascript" id="handleViewModeForTable">
 		// JavaScript for VIEW mode
 		jQuery(document).ready(function(){
 			
@@ -28,7 +28,7 @@
 					$("p").filter(":hidden").toggle(true);
 				}
 			});
-			properViewMode("f6dbee30-d965-47f5-b9b0-bc17f559dfad");
+			handleViewMode("f6dbee30-d965-47f5-b9b0-bc17f559dfad");
 		});
 	</script>
 </ifMode>
