--- a/omod/src/main/webapp/resources/htmlforms/triage.html
+++ b/omod/src/main/webapp/resources/htmlforms/triage.html
@@ -60,12 +60,12 @@
 </ifMode>
 
 <ifMode mode="VIEW">
-	<script type="text/javascript" id="properViewModeForTable">
+	<script type="text/javascript" id="handleViewModeForTable">
 
 		// JavaScript for VIEW mode
 		jQuery(document).ready(function(){
-			properViewMode("5743bf01-7879-40a0-ab26-95fc2446e510");
-			properViewModeForTable("5743bf01-7879-40a0-ab26-95fc2446e510");
+			handleViewMode("5743bf01-7879-40a0-ab26-95fc2446e510");
+			handleViewModeForTable("5743bf01-7879-40a0-ab26-95fc2446e510");
 		});
 
 	</script>
