--- a/omod/src/main/webapp/resources/htmlforms/fluidbalance.html
+++ b/omod/src/main/webapp/resources/htmlforms/fluidbalance.html
@@ -2,10 +2,10 @@
 <htmlform formUuid="1c6c9d87-748b-43c4-b764-3df7e711762f" formName="Fluid Balance" formEncounterType="9f5c90b2-03e0-4374-8534-6c32ea71f3ab" formVersion="0.5">
 
 <ifMode mode="VIEW">
-	<script type="text/javascript" id="properViewMode">
+	<script type="text/javascript" id="handleViewMode">
 		// JavaScript for VIEW mode
 		jQuery(document).ready(function(){
-			properViewMode("1c6c9d87-748b-43c4-b764-3df7e711762f");
+			handleViewMode("1c6c9d87-748b-43c4-b764-3df7e711762f");
 		});
 	</script>
 </ifMode>
