--- a/omod/src/main/webapp/resources/htmlforms/history.html
+++ b/omod/src/main/webapp/resources/htmlforms/history.html
@@ -12,11 +12,11 @@
 
 
 <ifMode mode="VIEW">
-	<script type="text/javascript" id="properViewModeForTable">
+	<script type="text/javascript" id="handleViewModeForTable">
 		// JavaScript for VIEW mode
 		jQuery(document).ready(function(){
-			properViewMode("400a99d9-c1bd-4b5c-acb3-fedb4ccc0ea4");
-			properViewModeForTable("400a99d9-c1bd-4b5c-acb3-fedb4ccc0ea4");
+			handleViewMode("400a99d9-c1bd-4b5c-acb3-fedb4ccc0ea4");
+			handleViewModeForTable("400a99d9-c1bd-4b5c-acb3-fedb4ccc0ea4");
 		});
 	</script>
 </ifMode>
