--- a/omod/src/main/webapp/resources/htmlforms/immunity.html
+++ b/omod/src/main/webapp/resources/htmlforms/immunity.html
@@ -1,4 +1,4 @@
-<htmlform formUuid="b44b99a5-2048-4d45-bf75-40e2eba29c8c" formName="Immunity and Infection" formEncounterType="e864f775-d1d0-4936-85df-557ad5c44ae1" formVersion="0.5">
+<htmlform formUuid="b44b99a5-2048-4d45-bf75-40e2eba29c8c" formName="Immunity and Infection" formEncounterType="e864f775-d1d0-4936-85df-557ad5c44ae1" formVersion="0.5.1">
 
 <ifMode mode="VIEW" include="false">
 	<script type="text/javascript">
@@ -34,29 +34,33 @@
 </ifMode>
 
 <ifMode mode="VIEW">
-	<script type="text/javascript" id="properViewMode">
+	<script type="text/javascript" id="handleViewMode">
 
 		// JavaScript for VIEW mode
 
 		if(jQuery){
 			jQuery(document).ready(function(){
 				
-				properViewMode("b44b99a5-2048-4d45-bf75-40e2eba29c8c");
-				jQuery(".check").closest("p").hide();
-				jQuery('br').remove();
+				handleViewMode("b44b99a5-2048-4d45-bf75-40e2eba29c8c");
 
-				/* Handle displaying On Time immunity given */
-				jQuery("fieldset").find(".check").each( function () {
-					
-					var obs = jQuery(this).attr("name");
-					var onTimeValue = jQuery(this).attr("onTimeValue");
+				$("htmlform").each(function (index, currentForm) {
+					if ($(currentForm).attr("formuuid") == "b44b99a5-2048-4d45-bf75-40e2eba29c8c") {
+						jQuery(".check").closest("p").hide();
+						jQuery('br').remove();
 
-					/* assign the onTime class to given on time vaccines */
-					if (onTimeValue == jQuery(this).closest('fieldset').find("#"+obs+"-age").find('.value').text()) {
-						jQuery(this).closest('fieldset').find("#"+obs+"-age").attr("class", "onTime");
+						/* Handle displaying On Time immunity given */
+						jQuery("fieldset").find(".check").each( function () {
+
+							var obs = jQuery(this).attr("name");
+							var onTimeValue = jQuery(this).attr("onTimeValue");
+
+							/* assign the onTime class to given on time vaccines */
+							if (onTimeValue == jQuery(this).closest('fieldset').find("#"+obs+"-age").find('.value').text()) {
+								jQuery(this).closest('fieldset').find("#"+obs+"-age").attr("class", "onTime");
+							}
+						});
 					}
 				});
-
 			});
 		}
 
@@ -390,7 +394,7 @@
 					<input class="check" id="2-pcv-ontime" name="2-pcv" type="checkbox" onTimeValue="2.5">Given on time (10 weeks)</input>
 				</p>
 			</obsgroup>
-			
+
 			<obsgroup groupingConceptId="LFHC:1103">
 				<span >
 					<p style="display:none">
