--- a/omod/src/main/webapp/resources/htmlforms/ipd-nurse.html
+++ b/omod/src/main/webapp/resources/htmlforms/ipd-nurse.html
@@ -1,11 +1,11 @@
 <htmlform formUuid="348c2a9e-17c8-4c15-8cef-e8f332a69853" formName="IPD Nurse" formEncounterType="c88f3763-77a4-4e57-a42f-eef996b03b98" formVersion="0.5">
 
 <ifMode mode="VIEW">
-	<script type="text/javascript" id="properViewMode">
+	<script type="text/javascript" id="handleViewMode">
 
 		// JavaScript for VIEW mode
 		jQuery(document).ready(function(){
-			properViewMode("348c2a9e-17c8-4c15-8cef-e8f332a69853");
+			handleViewMode("348c2a9e-17c8-4c15-8cef-e8f332a69853");
 		});
 	</script>
 
