--- a/omod/src/main/webapp/resources/htmlforms/opd-nurse.html
+++ b/omod/src/main/webapp/resources/htmlforms/opd-nurse.html
@@ -11,7 +11,7 @@
 </ifMode>
 
 <ifMode mode="VIEW">
-	<script type="text/javascript" id="properViewModeForTable">
+	<script type="text/javascript" id="handleViewModeForTable">
 		// JavaScript for VIEW mode
 		jQuery(document).ready(function(){
 			$("htmlform").each(function (index, currentForm) {
@@ -20,8 +20,8 @@
 					$("p").filter(":hidden").toggle(true);
 				}
 			});
-			properViewModeForTable("44305e02-7e49-4f5a-8acf-49042acbe483");
-			properViewMode("44305e02-7e49-4f5a-8acf-49042acbe483");
+			handleViewModeForTable("44305e02-7e49-4f5a-8acf-49042acbe483");
+			handleViewMode("44305e02-7e49-4f5a-8acf-49042acbe483");
 			
 		});
 	</script>
