--- a/omod/src/main/webapp/resources/htmlforms/treatment.html
+++ b/omod/src/main/webapp/resources/htmlforms/treatment.html
@@ -11,11 +11,11 @@
 </ifMode>
 
 <ifMode mode="VIEW">
-	<script type="text/javascript" id="properViewMode">
+	<script type="text/javascript" id="handleViewMode">
 
 		// JavaScript for VIEW mode
 		jQuery(document).ready(function(){
-			properViewMode("3faa978f-8c89-4f8e-b29f-17fd11099ecf");
+			handleViewMode("3faa978f-8c89-4f8e-b29f-17fd11099ecf");
 		});
 	</script>
 </ifMode>
