Adjust display for Physical Exam form 	modified:   phys-exam.html

--- a/omod/src/main/webapp/resources/htmlforms/phys-exam.html
+++ b/omod/src/main/webapp/resources/htmlforms/phys-exam.html
@@ -353,9 +353,11 @@
 			Other comments
 		</legend>
 		<h3>Other comments</h3>
-		<p>
-			Other comments
-		</p>
+		<ifMode mode="VIEW" include="false">
+			<p>
+				Other comments
+			</p>
+		</ifMode>
 		<p>
 			<obs id="19-finding" conceptId="CIEL:159395" rows="4" cols="40" />              
 		</p>
