Adjust display of Wound Details form 	modified:   wound.html

--- a/omod/src/main/webapp/resources/htmlforms/wound.html
+++ b/omod/src/main/webapp/resources/htmlforms/wound.html
@@ -1,4 +1,4 @@
-<htmlform formUuid="52c43d9d-c3b6-4fda-8f6b-3590034e7c42" formName="Wound Details" formEncounterType="75a97fa9-4b04-4968-8f5b-041e5d0a3dae" formVersion="0.5">
+<htmlform formUuid="52c43d9d-c3b6-4fda-8f6b-3590034e7c42" formName="Wound Details" formEncounterType="75a97fa9-4b04-4968-8f5b-041e5d0a3dae" formVersion="0.5.1">
 
 <ifMode mode="VIEW">
 	<script type="text/javascript" id="handleViewMode">
@@ -111,8 +111,8 @@
 		<p>
 			<obs conceptId="LFHC:1035" />
 		</p>
-		Type of exudate
 		<p>
+			<span class="questionLabel">Type of exudate</span>
 			<obs conceptId="LFHC:1037"/>
 		</p>
 
@@ -141,7 +141,7 @@
 		</p>
 
 	</fieldset>
-<fieldset field-separator=", ">
+	<fieldset field-separator=", ">
 		<legend>
 			Color/condition
 		</legend>
@@ -153,7 +153,7 @@
 		</p>
 
 	</fieldset>
-<fieldset field-separator=", ">
+	<fieldset field-separator=", ">
 		<legend>
 			Dressing change
 		</legend>
