LFHCDESK-70: Removing the 'showUnits' because of incorrect concept data type

--- a/omod/src/main/webapp/resources/htmlforms/lines-tubes.html
+++ b/omod/src/main/webapp/resources/htmlforms/lines-tubes.html
@@ -137,7 +137,7 @@
 				<obs conceptId="LFHC:1076" labelText="Date inserted: "/>
 			</p>
 			<p>
-				<obs conceptId="LFHC:1077" labelText="Size: " showUnits="true" />
+				<obs conceptId="LFHC:1077" labelText="Size: ">
 			</p>
 		</obsgroup>
 	</fieldset>
