Adjust display of Treatment Plan form 	modified:   treatment.html

--- a/omod/src/main/webapp/resources/htmlforms/treatment.html
+++ b/omod/src/main/webapp/resources/htmlforms/treatment.html
@@ -216,13 +216,14 @@
 							<obs id="{n}" conceptId="LFHC:1054" answerConceptIds="LFHC:1205,CIEL:80804,LFHC:1206,CIEL:78617,LFHC:1207,CIEL:161922"/>
 						</p>
 						<p>
-							<obs conceptId="CIEL:162745" labelText="Rate of IV fluid per hour: " showUnits="true"/>   
+							<span class="questionLabel">Rate of IV fluid per hour: </span>
+							<obs conceptId="CIEL:162745"  showUnits="true"/>   
 						</p>
 						<p>
 							<i class="addEntry icon-">&#xf055; Add</i>
 							<i class="removeEntry icon-">   &#xf056; Remove</i>
 						</p>
-						<br/>
+
 					</obsgroup>
 				</div>
 			</template>
