--- a/omod/src/main/webapp/resources/htmlforms/lab-test-order.html
+++ b/omod/src/main/webapp/resources/htmlforms/lab-test-order.html
@@ -1,10 +1,10 @@
 <htmlform formUuid="074c6c42-7f24-46dc-87d4-e71951207d22" formName="Lab Test Order" formEncounterType="39deb891-8dc6-451b-9361-dbf564f27250" formVersion="0.4"
 	formAddMetadata="yes"
 	formUILocation="patientDashboard.visitActions"
-	formOrder="8"
+	formOrder="35"
 	formIcon="icon-stethoscope"
 	formShowIf=""
-	formDisplayStyle="Simple"
+	formDisplayStyle="Standard"
 	>
 
 
