--- a/omod/src/main/webapp/resources/htmlforms/nvobs.html
+++ b/omod/src/main/webapp/resources/htmlforms/nvobs.html
@@ -1,4 +1,11 @@
-<htmlform formUuid="d18289b0-d0a4-4753-a500-55767eb057de" formName="Neurovascular Observations" formEncounterType="4a4e04a0-1424-4fb1-bebb-ba6bb16dd628" formVersion="0.1">
+<htmlform formUuid="d18289b0-d0a4-4753-a500-55767eb057de" formName="Neurovascular Observations" formEncounterType="4a4e04a0-1424-4fb1-bebb-ba6bb16dd628" formVersion="0.2"
+formAddMetadata="yes"
+	formUILocation="patientDashboard.visitActions"
+	formOrder="72"
+	formIcon="icon-medkit"
+	formShowIf=""
+	formDisplayStyle="Simple"
+>
 
 <ifMode mode="VIEW" include="false">
 	<uiInclude provider="lfhcforms" javascript="toggleContainers.js"/>
