LFHCDESK-70: Conflicting concept information for LFHC:1077 (Lines and Tubes form) Removing the 'showUnits="true" '

--- a/omod/src/main/webapp/resources/htmlforms/lines-tubes.html
+++ b/omod/src/main/webapp/resources/htmlforms/lines-tubes.html
@@ -1,11 +1,11 @@
-<htmlform formUuid="592bddc7-9889-490b-b3fd-5795648b078a" formName="Lines and Tubes" formEncounterType="934aad8b-250d-450b-9cb3-ca5f01841f61" formVersion="0.5.1"
-	formAddMetadata="yes"
-	formUILocation="patientDashboard.visitActions"
-	formOrder="16"
-	formIcon="icon-medkit"
-	formShowIf=""
-	formDisplayStyle="Simple"
-	>
+<htmlform formUuid="592bddc7-9889-490b-b3fd-5795648b078a" formName="Lines and Tubes" formEncounterType="934aad8b-250d-450b-9cb3-ca5f01841f61" formVersion="0.5.2"
+formAddMetadata="yes"
+formUILocation="patientDashboard.visitActions"
+formOrder="16"
+formIcon="icon-medkit"
+formShowIf=""
+formDisplayStyle="Simple"
+>
 
 
 <ifMode mode="VIEW">
@@ -21,7 +21,6 @@
 	</script>
 
 </ifMode>
->>>>>>> LFHCFORMS-62
 
 <div class="hidden" id="who-when-where">
 	<p id="who">
@@ -146,11 +145,11 @@
 				<obs conceptId="LFHC:1076" labelText="Date inserted: "/>
 			</p>
 			<p>
-				<obs conceptId="LFHC:1077" labelText="Size: ">
-			</p>
-		</obsgroup>
-	</fieldset>
-</section>
+				<obs conceptId="LFHC:1077" labelText="Size: "/>
+				</p>
+			</obsgroup>
+		</fieldset>
+	</section>
 
-<submit/>
-</htmlform>
+	<submit/>
+	</htmlform>
