LFHCDESK-70: Conflicting concept information for LFHC:1077 (Lines and Tubes form) Changing display of the fields Adding units 	modified:   lines-tubes.html

--- a/omod/src/main/webapp/resources/htmlforms/lines-tubes.html
+++ b/omod/src/main/webapp/resources/htmlforms/lines-tubes.html
@@ -69,7 +69,7 @@ formDisplayStyle="Simple"
 				<obs conceptId="LFHC:1064" labelText="Size: " showUnits="true" />
 			</p>
 			<p>
-				<obs conceptId="LFHC:1065" labelText="Site: " rows="1" cols="30"/>
+				<obs conceptId="LFHC:1065" labelText="Site: " />
 			</p>
 			<p>
 				<obs conceptId="LFHC:1182" labelText="Date removed: "/>
@@ -87,7 +87,7 @@ formDisplayStyle="Simple"
 				<obs conceptId="LFHC:1067" labelText="Size: " showUnits="true" />
 			</p>
 			<p>
-				<obs conceptId="LFHC:1068" labelText="Site: " rows="1" cols="30"/>
+				<obs conceptId="LFHC:1068" labelText="Site: " />
 			</p>
 			<p>
 				<obs conceptId="LFHC:1183" labelText="Date removed: "/>
@@ -106,7 +106,7 @@ formDisplayStyle="Simple"
 				<obs conceptId="LFHC:1070" labelText="Size: " showUnits="true" />
 			</p>
 			<p>
-				<obs conceptId="LFHC:1071" labelText="Site: " rows="1" cols="30"/>
+				<obs conceptId="LFHC:1071" labelText="Site: " />
 			</p>
 			<p>
 				<obs conceptId="LFHC:1184" labelText="Date removed: "/>
@@ -121,7 +121,7 @@ formDisplayStyle="Simple"
 				<obs conceptId="LFHC:1072" labelText="Date inserted: "/>
 			</p>
 			<p>
-				<obs conceptId="LFHC:1073" labelText="Site: " rows="1" cols="30" />
+				<obs conceptId="LFHC:1073" labelText="Site: "  />
 			</p>
 		</obsgroup>
 	</fieldset>
@@ -133,7 +133,7 @@ formDisplayStyle="Simple"
 				<obs conceptId="LFHC:1074" labelText="Date inserted: "/>
 			</p>
 			<p>
-				<obs conceptId="LFHC:1075" labelText="Size: "/>
+				<obs conceptId="LFHC:1075" labelText="Size: " showUnits="true" />
 			</p>
 		</obsgroup>
 	</fieldset>
@@ -145,10 +145,10 @@ formDisplayStyle="Simple"
 				<obs conceptId="LFHC:1076" labelText="Date inserted: "/>
 			</p>
 			<p>
-				<obs conceptId="LFHC:1221" labelText="Size: "/>
+				<obs conceptId="LFHC:1221" labelText="Size: " showUnits="true" />
 			</p>
 			<p>
-				<obs conceptId="LFHC:1077" labelText="Site: " rows="1" cols="30"/>
+				<obs conceptId="LFHC:1077" labelText="Site: " />
 			</p>
 		</obsgroup>
 	</fieldset>
