--- a/omod/src/main/webapp/resources/htmlforms/ipd-nurse.html
+++ b/omod/src/main/webapp/resources/htmlforms/ipd-nurse.html
@@ -1,4 +1,4 @@
-<htmlform formUuid="348c2a9e-17c8-4c15-8cef-e8f332a69853" formName="IPD Nurse" formEncounterType="c88f3763-77a4-4e57-a42f-eef996b03b98" formVersion="0.5.1"
+<htmlform formUuid="348c2a9e-17c8-4c15-8cef-e8f332a69853" formName="IPD Nurse" formEncounterType="c88f3763-77a4-4e57-a42f-eef996b03b98" formVersion="0.5.2"
 	formAddMetadata="yes"
 	formUILocation="patientDashboard.visitActions"
 	formOrder="13"
@@ -100,6 +100,17 @@
 		</p>
 	</fieldset>
 </section>
+
+<section id="financial-assessment" sectionTag="section" headerStyle="title" headerCode="Financial Assessment">
+	<fieldset field-separator=", ">
+		<legend>Financial assessment</legend>
+		<h3>Initial financial assessment completed</h3>
+		<p>
+			<obs conceptId="LFHC:1219" style="yes_no_dropdown"/>
+		</p>
+	</fieldset>
+</section>
+
 
 <submit/>
 </htmlform>
