LFHCDESK-75: IPD Nurse - Add Initial financial assessment completed Changing the display of concept from boolean Yes/No to normal (coded) dropdown 	modified:   omod/src/main/webapp/resources/htmlforms/ipd-nurse.html

--- a/omod/src/main/webapp/resources/htmlforms/ipd-nurse.html
+++ b/omod/src/main/webapp/resources/htmlforms/ipd-nurse.html
@@ -1,4 +1,4 @@
-<htmlform formUuid="348c2a9e-17c8-4c15-8cef-e8f332a69853" formName="IPD Nurse" formEncounterType="c88f3763-77a4-4e57-a42f-eef996b03b98" formVersion="0.5.2"
+<htmlform formUuid="348c2a9e-17c8-4c15-8cef-e8f332a69853" formName="IPD Nurse" formEncounterType="c88f3763-77a4-4e57-a42f-eef996b03b98" formVersion="0.5.3"
 	formAddMetadata="yes"
 	formUILocation="patientDashboard.visitActions"
 	formOrder="13"
@@ -106,7 +106,7 @@
 		<legend>Financial assessment</legend>
 		<h3>Initial financial assessment completed</h3>
 		<p>
-			<obs conceptId="LFHC:1219" style="yes_no_dropdown"/>
+			<obs conceptId="LFHC:1219" />
 		</p>
 	</fieldset>
 </section>
